added findbugs checkstyle gitignore